# AT-AT

./: .gitignore  README.md
core/: pyproject.toml
frontend/: Dockerfile
project/core/: pyproject.toml
project/core/src/parser/: openapi_parser.py
